@@ -15,30 +15,42 @@
 		</STYLE> 
 	</HEAD>
 	<BODY>
+	
 		<B>Project <A HREF="http://www.kberg.ch/q/">Q</A></B><BR>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A HREF="http://www.kberg.ch/">Mike Kronenberg</A> coding<BR>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A HREF="http://www.cordney.com/">cordney*</A> coding<BR>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A HREF="http://www.lichtware.ch/">Andreas Meier</A> icons & webdesign<BR>
 		<BR>
+		
+		<B>Localizations</B><BR>
+		French by Katios<BR>
+		German by cordney* and Mike<BR>
+		Polish by Krzysztof Nadzieja<BR>
+		<BR>
+		
 		<A HREF="http://www.kberg.ch/q/">Q</A> is based on great open Source Software:<BR>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A HREF="http://www.qemu.org">QEMU</A> by Fabrice Bellard</A><BR>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://transmission.m0k.org">libtransmission</A> by Eric Petit<BR>
 		<BR>
+		
 		<B>Special Thanks go to</B><BR>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A HREF="http://stegefin.free.fr/">Pierre d'Herbemont</A> for the inital cocoa port<BR>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A HREF="http://www.gibix.net/projects/qemu/">Gwenole Beauchesne</A> for the Intel cocoa port<BR>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Peter Stewart for the initial OpenGL output<BR>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A HREF="http://www.boblycat.org/~malc/code/patches/qemu/">malc</A> for coaching me for the sound output<BR>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A HREF="http://www.boblycat.org/~malc/code/patches/qemu/">malc</A> for coaching Mike for the sound output<BR>
 		<BR>
+		
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mark G (VNC)<BR>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;John the Geek (VNC, Testing)<BR>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A HREF="http://web.mac.com/kaicherry/iWeb/TheCabaal/Dark%20Ten/Dark%20Ten.html">Kaicherry</A> (VNC, lots of support)<BR>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Heikki L (gcc3.4.5)<BR>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Katios (VNC)<BR>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Michael F (VNC)<BR>
 		<BR>
+		
 		<B>Licenses</B><BR>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;QEMU is licensed under <A HREF="http://www.qemu.org/license.html">GNU GPL/LGPL</A><BR>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Q is licensed under <A HREF="http://www.gnu.org/copyleft/gpl.html">GNU GPL</A><BR>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Q artwork is licensed under a <A HREF="http://creativecommons.org/licenses/by-nc-nd/2.5/">Creative Commons License</A>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Q artwork is licensed under the <A HREF="http://creativecommons.org/licenses/by-nc-nd/2.5/">by-nc-nd CCL</A>
+		
 	</BODY>
 </HTML>
